Diseño de los planes,falta ajustar arreglos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" >
     <title>RevoluxionGym</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- ontainer-fluid -->
+    <div class="container">
+
+      <div class="card" style="width: 20rem;">
+        <img src="./assets/img/planRevolution.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <p>Entrena en cualquiera de nuestras sedes en Colombia</p>
+            <h5 class="card-title">BENEFICIOS INCLUIDOS</h5>
+            <p class="card-text">Área de peso libre</p>
+            <p class="card-text">Área de cardio</p>
+            <p class="card-text">Camerinos</p>            
+            <p class="card-text">Duchas</p>   
+            <p class="card-text">Lockers</p>
+            <p class="card-text">Sillones de masaje</p>
+            <p class="card-text">Invitar hasta 5 amigos al mes</p>
+          <a href="#" class="btn btn-lg"><b>Comprar</b></a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 20rem;">
+        <img src="./assets/img/planStandard.png" class="card-img-top hei" alt="...">
+        <div class="card-body">
+            <p>Acceso ilimitado a tu sede <br><br></p>
+            <h5 class="card-title">BENEFICIOS INCLUIDOS</h5>
+            <p class="card-text">Área de peso libre</p>
+            <p class="card-text">Área de cardio</p>
+            <p class="card-text">Camerinos</p>            
+            <p class="card-text">Duchas</p>   
+            <p class="card-text">Lockers <br><br><br><br></p>
+
+            <a href="#" class="btn btn-lg"><b>Comprar</b> </a>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
