arreglo del button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p class="card-text">Área de cardio</p>
             <p class="card-text">Camerinos</p>            
             <p class="card-text">Duchas</p>   
-            <p class="card-text">Lockers <br><br><br><br></p>
+            <p class="card-text">Lockers <br><br><br><br><br></p>
 
             <a href="#" class="btn btn-lg"><b>Comprar</b> </a>
         </div>
