--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     >Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Nutrición</a>
+                  <a class="nav-link" href="pages/nutricion.html">Nutrición</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Planes</a>
