--- a/pages/nutricion.html
+++ b/pages/nutricion.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse float-end" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="nutricion.html">Nutrición</a>
