Home section added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="container-fluid menu">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#"
                     >Inicio</a>
@@ -210,6 +210,39 @@
     <div class="banner1">
       <h1>RevoluxionGym</h1>
     </div>
+
+    <div class="gym-services">
+      <h2>Beneficios</h2>
+    
+
+    <div class="card-group">
+      <div class="card">
+        <img src="./assets/img/healthy-food.jpg" class="card-img-top" alt="Healthy Food">
+        <div class="card-body">
+          <h5 class="card-title">Nutrición personalizada</h5>
+          <p class="card-text">Podrás acceder a nutricionistas expertos que crearán una dieta personalizada de acuerdo a tus necesidades.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/img/gym-class.jpg" class="card-img-top" alt="Gym class">
+        <div class="card-body">
+          <h5 class="card-title">Clases grupales</h5>
+          <p class="card-text">Tendrás acceso a diferentes tipos de clases según tus gustos.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/img/gym.jpg" class="card-img-top" alt="Gym">
+        <div class="card-body">
+          <h5 class="card-title">Rutina personalizada</h5>
+          <p class="card-text">Los mejores entrenadores para ti, diseñarán una rutina acorde a tus intereses. </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="gym-planes">
+    <h2>Planes</h2>
+  
     <div class="container">
       <div class="card" style="width: 20rem">
         <img
@@ -250,6 +283,15 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="gym-services">
+    <h2>Contáctanos</h2>
+    <p>Estamos ubicados en XXXX</p>
+    <p>Comunícate al mail mail@mail.com</p>
+    <p>O llámanos al XXX-XXX-XXX</p>
+  </div>
+
     <footer class="text-center">&copy; RevoluxionGym</footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
