--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     >Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pages/nutricion.html">Nutrición</a>
+                  <a class="nav-link" href="./pages/nutricion.html">Nutrición</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Planes</a>
@@ -43,7 +43,7 @@
                   <a class="nav-link" href="#">Noticias</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pages/rutinas/rutinas.html">Rutinas</a>
+                  <a class="nav-link" href="./pages/rutinas/rutinas.html">Rutinas</a>
                 </li>
                 <li class="nav-item">
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#iniciarSesion">
