--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="../assets/css/login.css">
+    <link rel="stylesheet" href="./assets/css/login.css">
     <title>RevoluxionGym</title>
   </head>
   <body>
