Anexo de ejercicios a la seccion rutina

--- a/pages/rutinas/abdominales.html
+++ b/pages/rutinas/abdominales.html
@@ -52,40 +52,47 @@
         </nav>
     </header>
     <!-- Fin nav -->
-    <!-- Inicio tronco -->
-    <div id="tronco" class="tronco">
-        <h2>Sección del tronco</h2>
-        <div class="row justify-content-center">
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/pectoral.jpg" class="card-img-top" alt="Pectoral">
-                <div class="card-body">
-                  <h5 class="card-title">Pectoral</h5>
-                  <a href="./pectoral.html" class="btn btn-warning text-light">Ir a pectoral</a>
-                </div>
+    <!-- Inicio abdominales -->
+    <div id="abdominales" class="abdominales">
+        <h2>Sección de tronco: Abdominales</h2>
+        <div class="row m-3">
+            <div class="col-lg-6">
+                <img src="../../assets/img/Rutinas/Tronco/Abdominales/abdominalesMen.jpg" alt="">
             </div>
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/espalda.jpg" class="card-img-top" alt="Espalda">
-                <div class="card-body">
-                  <h5 class="card-title">Espalda</h5>
-                  <a href="./espalda.html" class="btn btn-warning text-light">Ir a espalda</a>
-                </div>
+            <div class="col-lg-6">
+                <h3>Dominadas</h3>
+                <p>
+                    ¿Cansado de las abdominales estáticas en las que te haces polvo sin resultados visibles? 
+                    ¿Has probado con las abdominales hipopresivas pero tu six-pack no te hace ni caso? Óscar Peiró, 
+                    director de Studio1, nos propone otro tipo de abdominales dentro de su entrenamiento de alta 
+                    intensidad que van a poner a prueba tu sentido del ritmo.
+                </p>
+                <h3>Rutina</h3>
+                <ul>
+                    <li>Dias de la semana: Lunes, Jueves, Domingo</li>
+                    <li>Repeticiones nivel principiante: 3 series de 10</li>
+                    <li>Repeticiones nivel medio: 3 series de 15</li>
+                    <li>Repeticiones nivel avanzado: 3 series de 30</li>
+                </ul>
+                <p>
+                    Para más ejercicios, rutinas standars o personalizadas debes registrarte y loguiarte en la parte de arriba podras encontrar esas opciones.
+                </p>
             </div>
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/abdominales.JPG" class="card-img-top" alt="Abdominales">
-                <div class="card-body">
-                  <h5 class="card-title">Abdominales</h5>
-                  <a href="./abdominales.html" class="btn btn-warning text-light">Ir a abdominales</a>
-                </div>
+            <div class="col-lg-6">
+                <img src="../../assets/img/Rutinas/Tronco/Abdominales/abdominalesWomen.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                
             </div>
         </div>
         <div class="row justify-content-center">
-            <a href="../rutinas/rutinas.html" class="btn btn-dark text-light quitarwidth">Ir a rutinas</a>
+            <a href="../rutinas/tronco.html" class="btn btn-dark text-light quitarwidth">Ir a tronco</a>
         </div>
     </div>
-    <!-- Fin tronco -->
+    <!-- Fin abdominales -->
     <!-- Inicio footer -->
     <footer class="text-center">
-      &copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez
+        &copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez
     </footer>
     <!-- Fin footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
