--- a/pages/rutinas/espalda.html
+++ b/pages/rutinas/espalda.html
@@ -52,40 +52,47 @@
         </nav>
     </header>
     <!-- Fin nav -->
-    <!-- Inicio tronco -->
-    <div id="tronco" class="tronco">
-        <h2>Sección del tronco</h2>
-        <div class="row justify-content-center">
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/pectoral.jpg" class="card-img-top" alt="Pectoral">
-                <div class="card-body">
-                  <h5 class="card-title">Pectoral</h5>
-                  <a href="./pectoral.html" class="btn btn-warning text-light">Ir a pectoral</a>
-                </div>
+    <!-- Inicio espalda -->
+    <div id="espalda" class="espalda">
+        <h2>Sección de tronco: Espalda</h2>
+        <div class="row m-3">
+            <div class="col-lg-6">
+                <img src="../../assets/img/Rutinas/Tronco/Dominada/dominadaMen.png" alt="">
             </div>
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/espalda.jpg" class="card-img-top" alt="Espalda">
-                <div class="card-body">
-                  <h5 class="card-title">Espalda</h5>
-                  <a href="./espalda.html" class="btn btn-warning text-light">Ir a espalda</a>
-                </div>
+            <div class="col-lg-6">
+                <h3>Dominadas</h3>
+                <p>
+                    con el agarre prono las palmas de las manos deben mirar hacia adelante. La anchura del agarre debe de ser como máximo 1,5 veces el ancho biacromial, 
+                    es decir, el ancho de los hombros. El movimiento comienza tirando con los dorsales y no con los bíceps, si además al hacer esto se saca pecho, se 
+                    reducirá drásticamente el estrés de los hombros. Cuando se esté realizando la fase concéntrica del ejercicio, los codos deben permanecer en los 
+                    costados y nunca se deben poner por delante de uno mismo a no ser que se desee enfatizar el trabajo de bíceps y antebrazos.
+                </p>
+                <h3>Rutina</h3>
+                <ul>
+                    <li>Dias de la semana: Lunes, Jueves, Domingo</li>
+                    <li>Repeticiones nivel principiante: 3 series de 5</li>
+                    <li>Repeticiones nivel medio: 3 series de 10</li>
+                    <li>Repeticiones nivel avanzado: 3 series de 20</li>
+                </ul>
+                <p>
+                    Para más ejercicios, rutinas standars o personalizadas debes registrarte y loguiarte en la parte de arriba podras encontrar esas opciones.
+                </p>
             </div>
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/abdominales.JPG" class="card-img-top" alt="Abdominales">
-                <div class="card-body">
-                  <h5 class="card-title">Abdominales</h5>
-                  <a href="./abdominales.html" class="btn btn-warning text-light">Ir a abdominales</a>
-                </div>
+            <div class="col-lg-6">
+                <img src="../../assets/img/Rutinas/Tronco/Dominada/dominadaWomen.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                
             </div>
         </div>
         <div class="row justify-content-center">
-            <a href="../rutinas/rutinas.html" class="btn btn-dark text-light quitarwidth">Ir a rutinas</a>
+            <a href="../rutinas/tronco.html" class="btn btn-dark text-light quitarwidth">Ir a tronco</a>
         </div>
     </div>
-    <!-- Fin tronco -->
+    <!-- Fin pectoral -->
     <!-- Inicio footer -->
     <footer class="text-center">
-      &copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez
+        &copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez
     </footer>
     <!-- Fin footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
