--- a/pages/rutinas/hombros.html
+++ b/pages/rutinas/hombros.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/css/styleRutinas.css">
-    <title>Rutinas: tronco</title>
+    <title>Rutinas: brazos</title>
 </head>
 <body>
     <!-- Inicio nav -->
@@ -52,40 +52,47 @@
         </nav>
     </header>
     <!-- Fin nav -->
-    <!-- Inicio tronco -->
-    <div id="tronco" class="tronco">
-        <h2>Sección del tronco</h2>
-        <div class="row justify-content-center">
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/pectoral.jpg" class="card-img-top" alt="Pectoral">
-                <div class="card-body">
-                  <h5 class="card-title">Pectoral</h5>
-                  <a href="./pectoral.html" class="btn btn-warning text-light">Ir a pectoral</a>
-                </div>
+    <!-- Inicio hombros -->
+    <div id="hombros" class="hombros">
+        <h2>Sección de brazos: Hombros</h2>
+        <div class="row m-3">
+            <div class="col-lg-6">
+                <img src="../../assets/img/Rutinas/Brazos/Hombro/hombroMen.jpg" alt="">
             </div>
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/espalda.jpg" class="card-img-top" alt="Espalda">
-                <div class="card-body">
-                  <h5 class="card-title">Espalda</h5>
-                  <a href="./espalda.html" class="btn btn-warning text-light">Ir a espalda</a>
-                </div>
+            <div class="col-lg-6">
+                <h3>Flexiones de hombro</h3>
+                <p>
+                    Este ejercicio, se lo recomiendo a aquellas personas que comiencen haciendo ejercicio en casa. 
+                    Muy útil a la hora de ayudarnos a ganar tono muscular en los hombros y fuerza funcional. En 
+                    caso de que no seáis capaces de realizarlas correctamente, os recomiendo que las hagáis con 
+                    las rodillas apoyadas en el suelo.
+                </p>
+                <h3>Rutina</h3>
+                <ul>
+                    <li>Dias de la semana: Lunes, Jueves, Domingo</li>
+                    <li>Repeticiones nivel principiante: 3 series de 8</li>
+                    <li>Repeticiones nivel medio: 3 series de 15</li>
+                    <li>Repeticiones nivel avanzado: 3 series de 25</li>
+                </ul>
+                <p>
+                    Para más ejercicios, rutinas standars o personalizadas debes registrarte y loguiarte en la parte de arriba podras encontrar esas opciones.
+                </p>
             </div>
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/abdominales.JPG" class="card-img-top" alt="Abdominales">
-                <div class="card-body">
-                  <h5 class="card-title">Abdominales</h5>
-                  <a href="./abdominales.html" class="btn btn-warning text-light">Ir a abdominales</a>
-                </div>
+            <div class="col-lg-6">
+                <img src="../../assets/img/Rutinas/Brazos/Hombro/hombroWomen.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                
             </div>
         </div>
         <div class="row justify-content-center">
-            <a href="../rutinas/rutinas.html" class="btn btn-dark text-light quitarwidth">Ir a rutinas</a>
+            <a href="../rutinas/brazos.html" class="btn btn-dark text-light quitarwidth">Ir a brazos</a>
         </div>
     </div>
-    <!-- Fin tronco -->
+    <!-- Fin hombros -->
     <!-- Inicio footer -->
     <footer class="text-center">
-      &copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez
+        &copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez
     </footer>
     <!-- Fin footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
