--- a/pages/rutinas/pectoral.html
+++ b/pages/rutinas/pectoral.html
@@ -52,40 +52,46 @@
         </nav>
     </header>
     <!-- Fin nav -->
-    <!-- Inicio tronco -->
-    <div id="tronco" class="tronco">
-        <h2>Sección del tronco</h2>
-        <div class="row justify-content-center">
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/pectoral.jpg" class="card-img-top" alt="Pectoral">
-                <div class="card-body">
-                  <h5 class="card-title">Pectoral</h5>
-                  <a href="./pectoral.html" class="btn btn-warning text-light">Ir a pectoral</a>
-                </div>
+    <!-- Inicio pectoral -->
+    <div id="pectoral" class="pectoral">
+        <h2>Sección de tronco: pectoral</h2>
+        <div class="row m-3">
+            <div class="col-lg-6">
+                <img src="../../assets/img/Rutinas/Tronco/Flexiones/flexionesMen.webp" alt="">
             </div>
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/espalda.jpg" class="card-img-top" alt="Espalda">
-                <div class="card-body">
-                  <h5 class="card-title">Espalda</h5>
-                  <a href="./espalda.html" class="btn btn-warning text-light">Ir a espalda</a>
-                </div>
+            <div class="col-lg-6">
+                <h3>Flexiones de pecho</h3>
+                <p>
+                    La flexión de codos es un ejercicio que involucra los codos, también conocida como lagartijas, plancha, pechada o simplemente flexión, 
+                    es un ejercicio físico realizado estando en posición inclinada, recostado hacia abajo, levantando el cuerpo únicamente con los brazos 
+                    y bajando de nuevo al suelo.
+                </p>
+                <h3>Rutina</h3>
+                <ul>
+                    <li>Dias de la semana: Lunes, Jueves, Domingo</li>
+                    <li>Repeticiones nivel principiante: 3 series de 8</li>
+                    <li>Repeticiones nivel medio: 3 series de 15</li>
+                    <li>Repeticiones nivel avanzado: 3 series de 20</li>
+                </ul>
+                <p>
+                    Para más ejercicios, rutinas standars o personalizadas debes registrarte y loguiarte en la parte de arriba podras encontrar esas opciones.
+                </p>
             </div>
-            <div class="card m-3" style="width: 18rem;">
-                <img src="../../assets/img/Rutinas/Tronco/abdominales.JPG" class="card-img-top" alt="Abdominales">
-                <div class="card-body">
-                  <h5 class="card-title">Abdominales</h5>
-                  <a href="./abdominales.html" class="btn btn-warning text-light">Ir a abdominales</a>
-                </div>
+            <div class="col-lg-6">
+                <img src="../../assets/img/Rutinas/Tronco/Flexiones/flexionesWomen.webp" alt="">
+            </div>
+            <div class="col-lg-6">
+                
             </div>
         </div>
         <div class="row justify-content-center">
-            <a href="../rutinas/rutinas.html" class="btn btn-dark text-light quitarwidth">Ir a rutinas</a>
+            <a href="../rutinas/tronco.html" class="btn btn-dark text-light quitarwidth">Ir a tronco</a>
         </div>
     </div>
-    <!-- Fin tronco -->
+    <!-- Fin pectoral -->
     <!-- Inicio footer -->
     <footer class="text-center">
-      &copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez
+        &copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez
     </footer>
     <!-- Fin footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
